WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244767
REGRESSION (
253865@main
): Fixed elements jiggle when scrolling youtube.com
https://bugs.webkit.org/show_bug.cgi?id=244767
Summary
REGRESSION (253865@main): Fixed elements jiggle when scrolling youtube.com
Simon Fraser (smfr)
Reported
2022-09-03 14:07:34 PDT
Summary: Scrolling on youtube.com causes the sidebar and header to jiggle Steps To Reproduce: 1. Load youtube.com 2. Scroll up and down via the trackpad Results: Fixed elements on the page jiggle
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-09-03 14:14:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3997
Simon Fraser (smfr)
Comment 2
2022-09-03 14:14:51 PDT
<
rdar://99495036
>
EWS
Comment 3
2022-09-09 09:56:29 PDT
Committed
254304@main
(99677e63f833): <
https://commits.webkit.org/254304@main
> Reviewed commits have been landed. Closing PR #3997 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug